{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 23,
  "lineage": "749cc1ea-9ec8-f172-5705-994c89d07ba1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-0d4d4999b26035fef",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-142-217-241.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.217.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a0844029df33d7d",
            "arn": "arn:aws:ec2:us-east-2:653203286623:instance/i-0a0231dd3a2be5537",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0231dd3a2be5537",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dell-laptop",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-098cdb7894b02eee4",
            "private_dns": "ip-10-0-1-212.us-east-2.compute.internal",
            "private_ip": "10.0.1.212",
            "public_dns": "ec2-18-191-10-203.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.10.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-097969021ad640e1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074a724f18e96fb5b",
            "tags": {
              "Name": "Jenkins-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09feefd131658affc"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:internet-gateway/igw-072f2e9fc80796e9a",
            "id": "igw-072f2e9fc80796e9a",
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4d4999b26035fef",
            "id": "nat-0fc2784cf6a32f3ac",
            "network_interface_id": "eni-03fe433f2b5954ae4",
            "private_ip": "10.0.1.239",
            "public_ip": "3.142.217.241",
            "subnet_id": "subnet-074a724f18e96fb5b",
            "tags": {
              "Name": "Development-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e2c578d509b72da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fc2784cf6a32f3ac",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e2c578d509b72da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-072f2e9fc80796e9a",
            "id": "r-rtb-0228c7054db4e092d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0228c7054db4e092d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04e2c578d509b72da",
            "owner_id": "653203286623",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0228c7054db4e092d",
            "owner_id": "653203286623",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e0c4c21ac5395db",
            "route_table_id": "rtb-04e2c578d509b72da",
            "subnet_id": "subnet-02304838e021ec50a"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7e0496f587b0d3",
            "route_table_id": "rtb-04e2c578d509b72da",
            "subnet_id": "subnet-0aa1c707b55f1a091"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fc865c63027440c",
            "route_table_id": "rtb-04e2c578d509b72da",
            "subnet_id": "subnet-056a62355862a560c"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d39b8601669c4040",
            "route_table_id": "rtb-0228c7054db4e092d",
            "subnet_id": "subnet-074a724f18e96fb5b"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069eb043d81c92261",
            "route_table_id": "rtb-0228c7054db4e092d",
            "subnet_id": "subnet-0a90951a84b744003"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc6f48ed3b9c671",
            "route_table_id": "rtb-0228c7054db4e092d",
            "subnet_id": "subnet-0a63c27d9935abcc2"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:security-group/sg-09feefd131658affc",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09feefd131658affc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": "",
            "owner_id": "653203286623",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:subnet/subnet-02304838e021ec50a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-02304838e021ec50a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:subnet/subnet-0aa1c707b55f1a091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0aa1c707b55f1a091",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:subnet/subnet-056a62355862a560c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-056a62355862a560c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:subnet/subnet-074a724f18e96fb5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-074a724f18e96fb5b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:subnet/subnet-0a90951a84b744003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a90951a84b744003",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-Public-Subnet-2"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:subnet/subnet-0a63c27d9935abcc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a63c27d9935abcc2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-Public-Subnet-3"
            },
            "vpc_id": "vpc-0edda237e61821136"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653203286623:vpc/vpc-0edda237e61821136",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5b2e5f13071e489",
            "default_route_table_id": "rtb-0027fd7915f3a2fff",
            "default_security_group_id": "sg-016618ef37a517946",
            "dhcp_options_id": "dopt-3e3b5a55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0edda237e61821136",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0027fd7915f3a2fff",
            "owner_id": "653203286623",
            "tags": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}